...
            ),
          ),
          const SizedBox(
            width: AppDimensions.disheInsertNumberSizedBox,
          ),
          InkWell(
            key: const Key('increment'),
            onTap: () {
              disheBloc.add(DisheNumberIncrement());
            },
            child: Container(
              padding: const EdgeInsets.symmetric(
                  horizontal: AppDimensions.disheContainerEdgeInsetsSymmetric),
...
