...
  @override
  Widget build(BuildContext context) {
    final theme = Theme.of(context).textTheme;
    return Container(
      margin: const EdgeInsets.symmetric(vertical: AppDimensions.dishesMargin),
      child: InkWell(
        key: const Key('list'),
        onTap: () => AutoRouter.of(context).push(DisheRoute(dishe: dishe)),
        child: Stack(
          alignment: Alignment.bottomLeft,
          children: [
            Image.network(
              dishe.image,
...
